--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer bg-dark text-center">
+    <div class="container">
+        <p> &copy; Alejandro Ramirez </p>
+    </div>
+</footer>
