creacion del nav y home

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark text-center">
     <div class="container">
-        <p> &copy; Alejandro Ramirez </p>
+        <p> &copy; {{ anio }} Alejandro Ramirez </p>
     </div>
 </footer>
