--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
+<app-navbar></app-navbar>
 
-<app-body></app-body>
-
-<app-footer></app-footer>
+<div class="container">
+    <router-outlet></router-outlet> 
+</div>
