Creacion de About

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,4 +11,12 @@
             <a href="#" class="btn">Hablemos</a>
         </div>
     </div>
+
+    <div class="home-sci">
+        <a href="#"><i class='bx bxl-facebook' ></i></a>
+        <a href="#"><i class='bx bxl-linkedin' ></i></a>
+        <a href="#"><i class='bx bxl-github' ></i></a>
+    </div>
+
+    <div class="home-img"></div>
 </section>
