--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     <div class="bx bx-menu" id="menu-icon"></div>
 
     <nav class="navbar">
-        <a href="#home" class="active">Inicio</a>
-        <a href="#about">Perfil</a>
+        <a routerLink="/home" routerLinkActive="active" class="active">Inicio</a>
+        <a routerLink="/about" routerLinkActive="active">Perfil</a>
         <a href="#education">Educación</a>
         <a href="#skills">Habilidades</a>
         <a href="#contact">Contacto</a>
