--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     align-items: center;
     padding: 0 9%;
+    /* background: url('');
+    background-size: cover;
+    background-position: center; */
 }
 
 .home-content {
@@ -31,32 +34,32 @@
     margin: 2rem 0 4rem;
 }
 
-.btn-box {
-    position: relative;
+//Iconos de faces, git, link
+.home-sci {
+    position: absolute;
+    bottom: 4rem;
+    width: 170px;
     display: flex;
     justify-content: space-between;
-    width: 34.5rem;
-    height: 5rem;
+
 }
 
-.btn-box .btn {
+.home-sci a {
     position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 15rem;
-    height: 100%;
-    background: var(--main-color);
+    width: 40px;
+    height: 40px;
+    background: transparent;
     border: .2rem solid var(--main-color);
-    border-radius: .8rem;
-    -webkit-border-radius: .8rem;
-    -moz-border-radius: .8rem;
-    -ms-border-radius: .8rem;
-    -o-border-radius: .8rem;
-    font-size: 1.8rem;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    color: var(--bg-color);
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    font-size: 20px;
+    color: var(--main-color);
     z-index: 1;
     overflow: hidden;
     transition: .5s;
@@ -66,31 +69,18 @@
     -o-transition: .5s;
 }
 
-.btn-box .btn:hover {
-    color: var(--main-color);
-}
-
-.btn-box .btn:nth-child(2) {
-    background: transparent;
-    color: var(--main-color);
-}
-
-.btn-box .btn:nth-child(2):hover {
+.home-sci a:hover {
     color: var(--bg-color);
 }
 
-.btn-box .btn:nth-child(2)::before {
-    background: var(--main-color);
-}
-
-.btn-box .btn::before {
+.home-sci a::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--bg-color);
+    background: var(--main-color);
     z-index: -1;
     transition: .5s;
     -webkit-transition: .5s;
@@ -99,6 +89,27 @@
     -o-transition: .5s;
 }
 
-.btn-box .btn:hover::before {
+.home-sci a:hover::before {
     width: 100%;
+}
+
+//Imagen
+.home-img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45%;
+    height: 100%;
+    background: transparent;
+/*     border: 2px solid red; */
+    transition: 3s;
+    -webkit-transition: 3s;
+    -moz-transition: 3s;
+    -ms-transition: 3s;
+    -o-transition: 3s;
+}
+
+.home-img:hover {
+    background: var(--bg-color);
+    opacity: .8;
 }
