creacion de education

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,8 @@
-<section class="about" id="about">
-    <h2 class="heading"><span>Hola</span></h2>
+<section class="about">
+    <h2 class="heading">Acerca de <span>Mi</span></h2>
     <div class="about-img">
         <img src="" alt="">
+        <span class="circle-spin"></span>
     </div>
     <div class="about-content">
         <h3>Frontend Developer! </h3>
