--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="home" id="home">
+<section class="home">
     <div class="home-content">
         <h1>Hola soy <span>Alejandro Ramirez</span> </h1>
         <div class="text-animate">
