--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <nav class="navbar">
         <a routerLink="/home" routerLinkActive="active" class="active">Inicio</a>
         <a routerLink="/about" routerLinkActive="active">Perfil</a>
-        <a href="#education">Educación</a>
+        <a routerLink="/education" routerLinkActive="active">Educación</a>
         <a href="#skills">Habilidades</a>
         <a href="#contact">Contacto</a>
     </nav>
