--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ section {
     padding: 10rem 9% 2rem;
 }
 
-//boton de color azul con hover
+//boton principal
 .btn-box {
     position: relative;
     display: flex;
@@ -106,4 +106,14 @@ section {
 
 .btn-box .btn:hover::before {
     width: 100%;
+}
+
+//Segundo boton tiene una clase para diferenciar de la clase anterior, esta clase se coloca pegada a la clase principal.
+.btn-box.btns {
+    display: inline-block;
+    width: 15rem;
+}
+
+.btn-box.btns a::before {
+    background: var(--second-bg-color);
 }
