Creacion de Skills

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,69 @@
-<p>education works!</p>
+<section class="education">
+    <h2 class="heading">Mi <span>Recorrido</span></h2>
+    <div class="education-row">
+
+        <!-- Primera Seccion de Educación -->
+        <div class="education-column">
+            <h3 class="title">Educación</h3>
+
+            <div class="education-box">
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Mater dagree - University</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Mater dagree - University</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Mater dagree - University</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Segunda Sección Experiencia -->
+        <div class="education-column">
+            <h3 class="title">Experiencia</h3>
+
+            <div class="education-box">
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Web developer - Company</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Web developer - Company</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
+                        <h3>Web developer - Company</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
