--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <a routerLink="/home" routerLinkActive="active" class="active">Inicio</a>
         <a routerLink="/about" routerLinkActive="active">Perfil</a>
         <a routerLink="/education" routerLinkActive="active">Educación</a>
-        <a href="#skills">Habilidades</a>
+        <a routerLink="/skills" routerLinkActive="active">Habilidades</a>
         <a href="#contact">Contacto</a>
     </nav>
 </header>
