--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,3 +117,15 @@ section {
 .btn-box.btns a::before {
     background: var(--second-bg-color);
 }
+
+
+//Letra del titulo Principal
+.heading {
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.heading span {
+    color: var(--main-color);
+}
