Creacion de Proyectos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
     <div class="home-content">
-        <h1>Hola soy <span>Alejandro Ramirez</span> </h1>
+        <h1>Hola soy Alejandro Ramirez</h1>
         <div class="text-animate">
             <h3>Frontend Developer</h3>
         </div>
