--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,6 @@
         <a routerLink="/about" routerLinkActive="active">Perfil</a>
         <a routerLink="/education" routerLinkActive="active">Educación</a>
         <a routerLink="/skills" routerLinkActive="active">Habilidades</a>
-        <a href="#contact">Contacto</a>
+        <a routerLink="/projects" routerLinkActive="active">Proyectos</a>
     </nav>
 </header>
