Creacion de proyecto

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer bg-dark text-center">
-    <div class="container">
-        <p> &copy; {{ anio }} Alejandro Ramirez </p>
+<footer class="footer">
+    <div class="footer-text">
+        <p> Copyright &copy; {{ anio }} por Alejandro Ramirez | All Right Reserved</p>
     </div>
 </footer>
