--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,62 @@
-<section class="contact">
-    <h2 class="heading">Pro<span>yectos</span></h2>
+<section class="projec">
+    <h2 class="heading_2">Pro<span>yectos</span></h2>
+    <div class="projec-row">
+
+        <!-- Primera Seccion de Proyecto -->
+        <div class="projec-column">
+            <div class="card">
+                <div class="face front">
+                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <h3>Proyecto_1</h3>
+                </div>
+                <div class="face back">
+                    <h3>Proyecto_1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
+                        et
+                        dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
+                    <div class="link">
+                        <a href="#">Proyecto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Segunda Seccion de Proyecto -->
+        <div class="projec-column">
+            <div class="card">
+                <div class="face front">
+                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <h3>Proyecto_1</h3>
+                </div>
+                <div class="face back">
+                    <h3>Proyecto_1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
+                        et
+                        dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
+                    <div class="link">
+                        <a href="#">Proyecto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Terceros Seccion de Proyecto -->
+        <div class="projec-column">
+            <div class="card">
+                <div class="face front">
+                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <h3>Proyecto_1</h3>
+                </div>
+                <div class="face back">
+                    <h3>Proyecto_1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
+                        et
+                        dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
+                    <div class="link">
+                        <a href="#">Proyecto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
