Termino el footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="footer-text">
-        <p> Copyright &copy; {{ anio }} por Alejandro Ramirez | All Right Reserved</p>
+        <p> Copyright &copy; {{ anio }} Alejandro Ramirez</p>
     </div>
 </footer>
