--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
-<div class="container">
+<div>
     <router-outlet></router-outlet> 
 </div>
 
-<!-- <app-footer></app-footer> --> <!-- Pendiente************************************************** -->
+<app-footer></app-footer> 
