--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -100,4 +100,13 @@
     padding-top: .5rem;
 }
 
+//***********************BreakPoints**************************//
+
+@media (max-width: 430px) {
+
+    .education {
+        padding: 10rem 4% 5rem 5%;
+    }
+}
+
 
