--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <header class="header">
     <a href="#" class="logo">Alejandro.R.S</a>
 
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <button class="bx bx-menu" id="menu-icon"></button>
 
     <nav class="navbar">
-        <a routerLink="/home" routerLinkActive="active" class="active">Inicio</a>
-        <a routerLink="/about" routerLinkActive="active">Perfil</a>
-        <a routerLink="/education" routerLinkActive="active">Educación</a>
-        <a routerLink="/skills" routerLinkActive="active">Habilidades</a>
-        <a routerLink="/projects" routerLinkActive="active">Proyectos</a>
+        <a routerLink="/home" routerLinkActive="active" class="selection">Inicio</a>
+        <a routerLink="/about" routerLinkActive="active" class="selection_2">Perfil</a>
+        <a routerLink="/education" routerLinkActive="active" class="selection_3">Educación</a>
+        <a routerLink="/skills" routerLinkActive="active" class="selection_4">Habilidades</a>
+        <a routerLink="/projects" routerLinkActive="active" class="selection_5">Proyectos</a>
     </nav>
 </header>
