--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ body {
 }
 
 section {
-    /* min-height: 100vh; Se modifico para que el footer no que*/
+    /* min-height: 100vh; */ /* Se modifico para que el footer no que */
     min-height: 96.9vh;
     padding: 10rem 9% 2rem;
 }
@@ -129,3 +129,21 @@ span {
 .btn-box.btns a::before {
     background: var(--second-bg-color);
 }
+
+//*****************BreakPoints**************************//
+
+@media (max-width: 1200px) {
+    
+    html {
+        font-size: 55%;
+    }    
+}
+
+@media (max-width: 520px) {
+    
+    html {
+        font-size: 50%;
+    }    
+}
+
+
