--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -130,4 +130,11 @@
     -o-transform: perspective(600px) rotateY(360deg);
 }
 
+//*****************BreakPoints**************************//
 
+@media (max-width: 520px) {
+    
+    .card .back {
+        font-size: 1.8rem;
+    }    
+}
