--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="header">
-    <a href="#" class="logo">Alejandro.R.S</a>
+    <a href="#" class="logo">Alejandro.R.S <span class="animate" style="--i:1;"></span> </a>
 
-    <button class="bx bx-menu" id="menu-icon"></button>
+    <button class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></button>
 
     <nav class="navbar">
         <a routerLink="/home" routerLinkActive="active" class="selection">Inicio</a>
@@ -9,5 +9,7 @@
         <a routerLink="/education" routerLinkActive="active" class="selection_3">Educación</a>
         <a routerLink="/skills" routerLinkActive="active" class="selection_4">Habilidades</a>
         <a routerLink="/projects" routerLinkActive="active" class="selection_5">Proyectos</a>
+
+        <span class="animate" style="--i:2;"></span>
     </nav>
 </header>
