--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,17 @@
 <section class="home">
     <div class="home-content">
-        <h1>Hola soy Alejandro Ramirez</h1>
+        <h1>Hola soy Alejandro Ramirez <span class="animate" style="--i:2;"></span></h1>
         <div class="text-animate">
             <h3>Frontend Developer</h3>
+            <span class="animate" style="--i:3;"></span>
         </div>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident ratione reiciendis nemo cum tempora accusamus commodi aspernatur quasi! Sequi provident quidem earum adipisci sit ipsum culpa asperiores minus sed!</p>
+        <span class="animate" style="--i:4;"></span>
         <div class="btn-box">
             <a href="#" class="btn">Hoja de Vida</a>
             <a href="#" class="btn">Hablemos</a>
+            <span class="animate" style="--i:5;"></span>
         </div>
     </div>
 
@@ -16,7 +19,9 @@
         <a href="#"><i class='bx bxl-facebook' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
         <a href="#"><i class='bx bxl-github' ></i></a>
+        <span class="animate" style="--i:6;"></span>
     </div>
 
-    <div class="home-img"></div>
+    <div class="home-imgHover"></div>
+    <span class="animate home-img" style="--i:7;"></span>
 </section>
