--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident ratione reiciendis nemo cum tempora accusamus commodi aspernatur quasi! Sequi provident quidem earum adipisci sit ipsum culpa asperiores minus sed!</p>
         <span class="animate" style="--i:4;"></span>
         <div class="btn-box">
+            <!-- <a href="archivo.jpg" download="Nombre-del-archivo ruta"></a>  para descargar el archivo-->
             <a href="#" class="btn">Hoja de Vida</a>
             <a href="#" class="btn">Hablemos</a>
             <span class="animate" style="--i:5;"></span>
