cambios de texto

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="about-content">
         <h3>Frontend Developer! </h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam quis ipsam voluptate facere culpa ab assumenda adipisci eveniet asperiores totam illo, molestias rerum facilis velit officia a? Doloribus, eveniet repudiandae.</p>
+        <p>Técnico en análisis de sistemas y diseñador gráfico con 2 años de experiencia como desarrollador Frontend. Especializado en diseño y desarrollo web, con habilidades en publicidad, branding y publicidad. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
 
         <div class="btn-box btns">
             <a href="#" class="btn">Ver más</a>
