--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -7,10 +7,10 @@
             <div class="card">
                 <div class="face front">
                     <img src="./assets/foto.jpg" alt="Proeycto 1">
-                    <h3>Proyecto_1</h3>
+                    <h3>Ecommerce</h3>
                 </div>
                 <div class="face back">
-                    <h3>Proyecto_1</h3>
+                    <h3>Ecommerce</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
                         et
                         dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
@@ -26,10 +26,10 @@
             <div class="card">
                 <div class="face front">
                     <img src="./assets/foto.jpg" alt="Proeycto 1">
-                    <h3>Proyecto_1</h3>
+                    <h3>API Pokemon</h3>
                 </div>
                 <div class="face back">
-                    <h3>Proyecto_1</h3>
+                    <h3>API Pokemon</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
                         et
                         dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
@@ -45,10 +45,10 @@
             <div class="card">
                 <div class="face front">
                     <img src="./assets/foto.jpg" alt="Proeycto 1">
-                    <h3>Proyecto_1</h3>
+                    <h3>CRUD</h3>
                 </div>
                 <div class="face back">
-                    <h3>Proyecto_1</h3>
+                    <h3>CRUD</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
                         et
                         dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
