--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="progress">
-                        <h3>Angular <span>50%</span></h3>
+                        <h3>Angular <span>60%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -38,12 +38,12 @@
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>Web Diseño <span>95%</span></h3>
+                        <h3>Web Frontend <span>85%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Web Desarrollo <span>80%</span></h3>
+                        <h3>Web Backend <span>45%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="progress">
-                        <h3>SEO Marketing <span>45%</span></h3>
+                        <h3>Bases Datos <span>35%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
