--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,12 +6,12 @@
             <span class="animate" style="--i:3;"></span>
         </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident ratione reiciendis nemo cum tempora accusamus commodi aspernatur quasi! Sequi provident quidem earum adipisci sit ipsum culpa asperiores minus sed!</p>
+        <p>¡Bienvenidos a mi portafolio! Soy un apasionado desarrollador Frontend y diseñador gráfico, estoy encantado de compartir con ustedes mi trabajo y mi creatividad. A lo largo de mi trayectoria profesional, he adquirido habilidades excepcionales en la creación de interfaces atractivas y funcionales, combinando una sólida experiencia en desarrollo web con un ojo artístico para el diseño gráfico. Brindando una experiencia del usuario excepcional en cada proyecto en el que trabajo.</p>
         <span class="animate" style="--i:4;"></span>
         <div class="btn-box">
             <!-- <a href="archivo.jpg" download="Nombre-del-archivo ruta"></a>  para descargar el archivo-->
             <a href="#" class="btn">Hoja de Vida</a>
-            <a href="#" class="btn">Hablemos</a>
+            <a href="#" class="btn">Juegos</a>
             <span class="animate" style="--i:5;"></span>
         </div>
     </div>
@@ -19,7 +19,7 @@
     <div class="home-sci">
         <a href="#"><i class='bx bxl-facebook' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
-        <a href="#"><i class='bx bxl-github' ></i></a>
+        <a href="https://github.com/Alejo12680" target="_blank"><i class='bx bxl-github' ></i></a>
         <span class="animate" style="--i:6;"></span>
     </div>
 
